--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(IconFontLoader VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 6.4 REQUIRED COMPONENTS Quick)
+find_package(Qt6 6.4 REQUIRED COMPONENTS Quick Gui)
 
 qt_standard_project_setup()
 
@@ -16,6 +16,7 @@ qt_add_qml_module(appIconFontLoader
     URI IconFontLoader
     VERSION 1.0
     QML_FILES Main.qml
+    SOURCES fontglyphloader.h fontglyphloader.cpp
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
@@ -30,7 +31,7 @@ set_target_properties(appIconFontLoader PROPERTIES
 )
 
 target_link_libraries(appIconFontLoader
-    PRIVATE Qt6::Quick
+    PRIVATE Qt6::Quick Qt6::Gui
 )
 
 include(GNUInstallDirs)
