--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(IconFontLoader VERSION 0.1 LANGUAGES CXX)
+project(FontGlyphViewer VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -8,34 +8,37 @@ find_package(Qt6 6.4 REQUIRED COMPONENTS Quick Gui)
 
 qt_standard_project_setup()
 
-qt_add_executable(appIconFontLoader
-    main.cpp
+qt_add_executable(appFontGlyphViewer
+    src/main.cpp
 )
 
-qt_add_qml_module(appIconFontLoader
-    URI IconFontLoader
+qt_add_qml_module(appFontGlyphViewer
+    URI assets
     VERSION 1.0
-    QML_FILES Main.qml
-    SOURCES fontglyphloader.h fontglyphloader.cpp
+    QML_FILES src/ui/Main.qml
+    SOURCES src/fontglyphloader.h src/fontglyphloader.cpp
+    QML_FILES src/ui/FgButton.qml
+    QML_FILES src/ui/FgPopup.qml
+    QML_FILES src/ui/FgDelegate.qml
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
-set_target_properties(appIconFontLoader PROPERTIES
-#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appIconFontLoader
+set_target_properties(appFontGlyphViewer PROPERTIES
+#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appFontGlyphViewer
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     MACOSX_BUNDLE TRUE
     WIN32_EXECUTABLE TRUE
 )
 
-target_link_libraries(appIconFontLoader
+target_link_libraries(appFontGlyphViewer
     PRIVATE Qt6::Quick Qt6::Gui
 )
 
 include(GNUInstallDirs)
-install(TARGETS appIconFontLoader
+install(TARGETS appFontGlyphViewer
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
