--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ qt_add_qml_module(appFontGlyphViewer
     QML_FILES src/ui/FgButton.qml
     QML_FILES src/ui/FgPopup.qml
     QML_FILES src/ui/FgDelegate.qml
+    RESOURCES assets/logo.png
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
