--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(FontGlyphViewer VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 6.4 REQUIRED COMPONENTS Quick Gui)
+find_package(Qt6 6.4 REQUIRED COMPONENTS Quick Gui QuickControls2)
 
 qt_standard_project_setup()
 
@@ -35,7 +35,7 @@ set_target_properties(appFontGlyphViewer PROPERTIES
 )
 
 target_link_libraries(appFontGlyphViewer
-    PRIVATE Qt6::Quick Qt6::Gui
+    PRIVATE Qt6::Quick Qt6::Gui Qt6::QuickControls2
 )
 
 include(GNUInstallDirs)
